tests/snapshots/test_runner__tests__compiler__typecheck__refutable_let_1__refutable_let_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Option [T] {
  some(T),
  none
};

foo (x: Option [Int]): Int = (
  some(x) = x;
  x
)

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/refutable_let_1/refutable_let_1.kk:7:3
  │
7 │   some(x) = x;
  │   ^^^^^^^ Let Binding Refutable Pattern
  │
  = Refutable pattern (a.k.a non-exhaustive pattern) is not allowed for let binding.
    The cases that are not matched are:

      none
